tests/ui/derive/fail_ts_default_missing_optional.stderr
error: `#[serde(default)]` makes this field optional at runtime; add `#[ts(optional, as = "Option<_>")]` so generated TypeScript matches, or add `#[validate(required)]` if omission should fail validation
 --> tests/ui/derive/fail_ts_default_missing_optional.rs:5:5
  |
5 | /     #[serde(default)]
6 | |     page: u64,
  | |_____________^
